<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/activity_select_bottom_nav_photos"
          android:title="@string/photos"
          android:icon="@drawable/ic_baseline_photo_24"/>

    <item android:id="@+id/activity_select_bottom_nav_videos"
        android:title="@string/videos"
        android:icon="@drawable/ic_baseline_local_movies_24"/>

    <item android:id="@+id/activity_select_bottom_nav_songs"
        android:title="@string/songs"
        android:icon="@drawable/ic_baseline_music_note_24"/>

    <item android:id="@+id/activity_select_bottom_nav_files"
        android:title="@string/files"
        android:icon="@drawable/ic_baseline_storage_24"/>

    <item android:id="@+id/activity_select_bottom_nav_apps"
        android:title="@string/apps"
        android:icon="@drawable/ic_baseline_android_24"/>

</menu>