<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">

            </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="@dimen/sixty_four_dp"
                android:layout_margin="@dimen/sixteen_dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_home_btnSend"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/send"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_vertical_align_top_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="@dimen/standard_icon" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="@dimen/sixty_four_dp"
                android:layout_margin="@dimen/sixteen_dp"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/materialCardView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_home_btnReceive"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/receive"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_vertical_align_bottom_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="@dimen/standard_icon" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/ic_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


            <androidx.recyclerview.widget.RecyclerView
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:id="@+id/activity_home_history_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>